# ec3ml-test

./: .gitignore  README.md  package.json
app/: index.html  package.json  tailwind.config.ts  tsconfig.json
app/src/: App.tsx  store.ts
app/src/components/: Background.tsx  CameraPanel.tsx  ConfidenceBars.tsx  PresenterPanel.tsx  SceneTransition.tsx
app/src/hooks/: useCameraStream.ts  useKeyboard.ts  useWebSocket.ts
app/src/scenes/: AboutMe.tsx  BehindTheScenes.tsx  Briefing.tsx  Closing.tsx  DemoBridge.tsx  Intro.tsx  JoinMl.tsx  LiveDemo.tsx  Reasons.tsx  VibeCoding.tsx  WhatMlSectionDoes.tsx
app/src/styles/: index.css
backend/: pyproject.toml
backend/backend/: __init__.py
backend/backend/app/: main.py  protocol.py  runtime.py
backend/backend/classifiers/: __init__.py  base.py  heuristic.py  learned.py  mlx_model.py
backend/backend/cv/: features.py  hand_tracker.py
backend/backend/game/: simulation.py  state.py
backend/backend/scripts/: collect_data.py  download_models.py  download_public_rps_dataset.py  prepare_public_rps_features.py  replay_frames.py  train_model.py
backend/models/: README.md
backend/scripts/: setup_and_train_mlx.sh
backend/tests/: test_heuristic_classifier.py  test_protocol.py  test_round_manager.py  test_runtime.py
shared/: types.ts
