[project]
name = "rps-showcase-backend"
version = "0.1.0"
description = "Local CPU-only backend for the RPS ML showcase"
requires-python = ">=3.11,<3.13"
dependencies = [
  "fastapi>=0.115.0,<1.0.0",
  "joblib>=1.4.0,<2.0.0",
  "mediapipe>=0.10.14,<0.11.0",
  "mlx>=0.26.0,<1.0.0; platform_system == 'Darwin' and platform_machine == 'arm64'",
  "numpy>=1.26.0,<3.0.0",
  "opencv-python-headless>=4.10.0,<5.0.0",
  "pydantic>=2.10.0,<3.0.0",
  "pydantic-settings>=2.6.0,<3.0.0",
  "python-multipart>=0.0.9,<1.0.0",
  "scikit-learn>=1.5.0,<2.0.0",
  "uvicorn>=0.34.0,<1.0.0",
  "websockets>=15.0.0,<16.0.0",
]

[dependency-groups]
dev = [
  "pytest>=8.3.0,<9.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["backend"]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
